# Open-Assistant

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  fetch_media.ps1  package.json  pnpm-lock.yaml  tsconfig.base.json
Assistente pessoal/: AIProviderService.swift  AgentsViews.swift  Assistente_pessoalApp.swift  BrowserSupport.swift  ChatViews.swift  CodeEditorViews.swift  CommandPaletteView.swift  ContentView.swift  CreativeWorkspaceViews.swift  FilesViews.swift  InteractionSupport.swift  Item.swift  KeychainStore.swift  LiquidGlassSupport.swift  MCPCommandVerifier.swift  MarketplacePurchaseService.swift  MockData.swift  OpenAssistantModels.swift  OpenAssistantStore.swift  SettingsView.swift  ShellSession.swift  SpeechService.swift  TerminalViews.swift  WorkflowViews.swift
Assistente pessoal.xcodeproj/: project.pbxproj
Assistente pessoal/Runtime/: LocalRuntimeManager.swift  RuntimeCommand.swift  RuntimeInstaller.swift  (+3 more)
Assistente pessoalTests/: Assistente_pessoalTests.swift
Assistente pessoalUITests/: Assistente_pessoalUITests.swift  Assistente_pessoalUITestsLaunchTests.swift
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: getting-started.md  roadmap.md
services/python/: README.md  pyproject.toml
services/python/open_assistant_sidecar/: __init__.py  main.py
services/python/open_assistant_sidecar/automation/: desktop.py
services/python/open_assistant_sidecar/voice/: stt.py  tts.py
(+66 files in other folders)
